Took out more stuff, implemented IPv6 hopefully.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Un-fromJust everything.
-Implement getServerAddress.
 IPv6-ify everything.
-
+Implement HTTPS.
+Implement cookies.
+Implement chunked.
